--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap-vue": "^2.0.0-rc.15",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
+    "vue-session": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
