--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.15",
+    "connect": "^3.6.6",
+    "serve-static": "^1.13.2",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-session": "^1.0.0",
